# CMake_Project

./: .gitignore  CMakeLists.txt  Doxyfile.in
.github/workflows/: ci.yml
docs/: README.md  how-it-works.md  mainpage.md
docs/html/: annotated.html  classes.html  dir_000002_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html
docs/html/d1/ded/: factorial_8h.html  factorial_8h_source.html
docs/html/d2/d35/: prime_8cpp__incl.dot
docs/html/d3/d30/: palindrome_8cpp__incl.dot
docs/html/d3/d71/: prime_8cpp.html
docs/html/d3/dbb/: palindrome_8h_source.html
docs/html/d4/d62/: example__class_8cpp__incl.dot
docs/html/d6/dc5/: classexample__class.html
docs/html/d7/d54/: factorial_8h__dep__incl.dot
docs/html/d8/da6/: example__class_8cpp.html
docs/html/d9/d00/: factorial_8cpp.html
docs/html/d9/d78/: factorial_8cpp__incl.dot
docs/html/d9/d89/: fibonacci_8cpp.html
docs/html/d9/dec/: palindrome_8cpp.html
docs/html/da/d98/: fibonacci_8h_source.html
docs/html/dd/d99/: prime_8h_source.html
docs/html/dd/da1/: example__class_8h__dep__incl.dot
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  files.tex  index.tex  refman.tex
include/: example_class.h  factorial.h  fibonacci.h  palindrome.h  prime.h
src/: CMakeLists.txt  example_class.cpp  factorial.cpp  fibonacci.cpp  palindrome.cpp  prime.cpp
tests/: CMakeLists.txt
tests/includes/: test_utils.h
tests/src/: test_example.cpp  test_factorial.cpp  test_fibonacci.cpp  test_palindrome.cpp  test_prime.cpp
(+22 files in other folders)
